# python-pdf-extractor

./: .gitignore  INSTALL.md  README.md  pyproject.toml  setup.cfg
python_pdf_extractor/: __init__.py  extract_pdf_pages.py
