[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "extract-pdf-pages"
version = "0.1.0"
description = "Small utility to extract a page range from a PDF"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pypdf>=3.0.0",
]

[project.scripts]
extract-pdf-pages = "python_pdf_extractor.extract_pdf_pages:cli"
