[metadata]
name = extract-pdf-pages
version = 0.1.0
description = Small utility to extract pages from a PDF

[options]
packages = find:
install_requires =
    pypdf>=3.0.0

[options.packages.find]
where = .

[options.entry_points]
console_scripts =
    extract-pdf-pages = python_pdf_extractor.extract_pdf_pages:cli
